[css] update overview button on top page

--- a/src/web/static/css/_index.scss
+++ b/src/web/static/css/_index.scss
@@ -3,17 +3,6 @@
 @import url(https://fonts.googleapis.com/css?family=Product+Sans);
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
-/*body {
-    background-color: #fbfbfb;
-    color: #555;
-    font-family: 'Raleway','Product Sans', 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
-    -webkit-font-smoothing: antialiased;
-    font-weight: 200;
-    line-height: 21px;
-    letter-spacing: 0;
-    font-size: 16px;
-}*/
-
 hr {
     border-bottom: 1px solid #ccc;
 }
@@ -25,31 +14,22 @@ hr {
 .center {
   text-align: center;
   display: block;
-  /*hr {
-    margin-top: 0;
-    margin-bottom: 10px;
-  }*/
 }
 
 div.overview-btn {
-
+    background-color: #47b98f;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 4px;
+    touch-action: manipulation;
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     width: 300px;
-    border: 1px solid #1e629e;
     margin-top: 40px;
     padding: 10px;
-    border-radius: 4px;
-    font-size: 18px;
-    background-color: #1e629e;
-
-    background-color: #6496c8;
-  border: none;
-  /*border-radius: 15px;*/
-  box-shadow: 0 5px #27496d;
 
     a.title {
         color: #fff; 
@@ -60,33 +40,11 @@ div.overview-btn {
 div.overview-btn:hover {
     background-color: #fff;
     cursor: pointer;
-    a.title {
-        color: #1e629e;
-    }
-}
-
-/*div.overview_btn{
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    width: 250px;
-    padding: 10px;
     border: 1px solid #1e629e;
-    border-radius: 4px;
-    background-color: #1e629e;
-    a.title {
-        color: #fff; 
-        text-decoration: none;
-    }
-}
-div.overview_btn:hover {
     a.title {
         color: #1e629e;
     }
-    cursor: pointer;
-    background-color: #fff;
-}*/
+}
 
 #indexContents {
     margin: 0 auto;
