--- a/src/web/static/css/_modules.scss
+++ b/src/web/static/css/_modules.scss
@@ -143,7 +143,8 @@ div.section {
     }
 
     img {
-      box-shadow: none;
+      box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+      /*border: 1px solid #808080;*/
       border: none;
       margin: 10px auto 3px;
     }
