--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1337,7 +1337,7 @@ aside.global {
     background-color: #5d89cb; }
   aside.global nav.aside-main {
     background-color: #f2f2f2;
-    padding-right: 10px;
+    /*padding-right: 10px;*/
     padding-left: 0px;
     padding-bottom: 20px;
     margin-right: 0;
@@ -1389,6 +1389,7 @@ aside.global {
               padding-left: 15px; }
           aside.global nav.aside-main > div > ul > li > ul li a {
             padding-left: 10px;
+            padding-right: 10px;
             box-sizing: border-box;
             display: inline-block;
             width: 100%;
