[update] Making Monaca Docs top page with the same style as Monaca top page.

--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -39,10 +39,10 @@ aside.top-page {
 div.aside-search-left {
     position: absolute;
     width: 288px;
-    right: 10px;
+    right: 0;
     float: right;
     padding: 0;
-    margin-right: 10px;
+    margin-right: 0px;
     top: 6px;
 }
 
