--- a/src/web/static/css/_index.scss
+++ b/src/web/static/css/_index.scss
@@ -16,40 +16,38 @@ hr {
   display: block;
 }
 
-div.overview-btn {
+div.overview-btn{
+    border-radius: 5px;
     background-color: #47b98f;
-    border: 1px solid #47b98f;
+    width: 350px;
+    height: 60px;
+    vertical-align: center;
     color: #fff;
     font-size: 18px;
-    border-radius: 4px;
-    touch-action: manipulation;
+    line-height: 60px;
+    text-align: center;
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
-    width: 300px;
-    margin-top: 40px;
-    padding: 10px;
-
+    margin-top: 50px;
     a.title {
         color: #fff; 
         text-decoration: none;
+        font-family: 'Open Sans';
     }
 }
 
 div.overview-btn:hover {
-    background-color: #fff;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
     cursor: pointer;
-    border: 1px solid #1e629e;
-    a.title {
-        color: #1e629e;
-    }
 }
 
 #indexContents {
     margin: 0 auto;
     max-width: 1020px;
+    color: #333;
 
     footer {
         margin: 30px auto 30px;
@@ -69,26 +67,30 @@ div.overview-btn:hover {
 
     h1 {
         font-size: 40px;
-        color: #000;
         clear: both;
+        color: #333;
     }
 
     h2 {
         font-size: 36px;
-        color: #000;
+        color: #333;
         clear: both;
+
     }
 
     h3 {
         font-size: 32px;
-        color: #000;
+        color: #333;
         clear: both;
+        -webkit-font-smoothing: antialiased;
+        font-weight: 300;
     }
 
     h4 {
+        color: #333;
         font-size: 24px;
-        color: #000;
         clear: both;
+        font-weight: 300;
     }
 }
 
@@ -101,14 +103,15 @@ table.products-guide {
 
 div.api-box {
     width: 155px;
-    border: 1px solid #1e629e;
+    border: 2px solid #3d6089;
+    background-color: #dcebf9;
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
     font-size: 18px;
 
     a.title {
-        color: #000; 
+        color: #333; 
         text-decoration: none;
     }
 }
@@ -122,11 +125,12 @@ div.api-box:hover {
 }
 
 div.product-box {
+    background-color: #dcebf8;
     width: 200px;
-    border: 1px solid #1e629e;
+    border: 2px solid #3d6089;
     margin: 10px;
-    border-radius: 5px;
-    color: #000;
+    border-radius: 10px;
+    color: #333;
     text-align: left;
 
     p {
@@ -164,18 +168,21 @@ div.product-box {
     }
 
     a.title {
-        color: #000; 
+        color: #337ab7;
+        font-weight: 400;
         text-decoration: none;
     }
     a.title:hover {
-        color: #fff; 
+        color: #3d6089; 
         cursor: pointer;
-        /*text-decoration: underline;*/
+        font-weight: 400;
+        text-decoration: underline;
     }
 }
 
 div.product-box:hover {
-    background-color: #c3c3c3;
+    /*opacity: 0.5;
+    filter: alpha(opacity=50);*/
     cursor: pointer;
     a.title:hover {
         cursor: pointer;
@@ -184,6 +191,8 @@ div.product-box:hover {
 
 
 img.product-logo {
+    opacity: 1;
+    filter: alpha(opacity=100);
     position: absolute;
     width: 60px;
     margin: 13px 10px;
@@ -235,6 +244,29 @@ img.product-logo-v2 {
 
 p.updates-loading {
     text-align: center;
+}
+
+div.container-updates{
+    margin-top: 20px;
+    width:100%; 
+    background-color: #f8f6f2;
+    position: absolute;
+    left: 0;
+    right: 0;
+
+    h4 {
+        color: #333;
+        font-size: 24px;
+        clear: both;
+        font-weight: 300;
+    }
+
+    table.box-updates{
+        max-width: 1020px;
+        width: 900px;
+        margin: 0 auto;
+        text-align: center;
+    }
 }
 
 
