--- a/src/web/layout/layout.html
+++ b/src/web/layout/layout.html
@@ -29,6 +29,8 @@
     <script type="text/javascript" src="/static/js/selectivizr-min.js"></script>
     <![endif]-->
 
+    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+
     <script type="text/javascript" src="/static/js/util.js"></script>
     <script type="text/javascript" src="/static/js/jquery.highlight-4.closure.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
