--- a/src/web/static/css/_header.scss
+++ b/src/web/static/css/_header.scss
@@ -12,6 +12,8 @@ header.navbar{
     a:link {text-decoration: none;}
     a:visited {text-decoration: none;}
 
+    
+
     .container {
         padding: 0px 80px;
         background-color: #2687ea;
@@ -393,8 +395,9 @@ html[lang=ja] {
 }
 
 header.global {
+    font-family: 'Open Sans';
     padding: 0px 80px;
-  background-color: #ffffff;
+    background-color: #2687ea;
   border-bottom: 1px solid #c2c0c1;
   color: #333;
   /*height: 70px;*/
@@ -404,10 +407,78 @@ header.global {
   left: 0px;
   width: 100%;
   @include clearfix-after();
-  a:link {color: $monaca-blue; text-decoration: none;}
-  a:visited {color: $monaca-blue; text-decoration: none;}
-  a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}
-  a:active {color: $monaca-blue; text-decoration: none;}
+  /*a:link {color: $monaca-blue; text-decoration: none;}*/
+  /*a:visited {color: $monaca-blue; text-decoration: none;}*/
+  /*a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}*/
+  /*a:active {color: $monaca-blue; text-decoration: none;}*/
+
+  /*new menu bar*/
+    .sub-menu-parent { 
+        position: relative; 
+    }
+
+    .current {
+        > a {
+            color: #FFF;
+            border-bottom: 3px solid #FFF;
+        }
+    }
+
+
+    .sub-menu { 
+      visibility: hidden; /* hides sub-menu */
+      opacity: 0;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      transform: translateY(-2em);
+      z-index: -1;
+      transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+    }
+
+    .sub-menu-parent:hover .sub-menu {
+      visibility: visible; /* shows sub-menu */
+      opacity: 1;
+      z-index: 1;
+      transform: translateY(0%);
+      transition-delay: 0s, 0s, 0.3s; /* this removes the transition delay so the menu will be visible while the other styles transition */
+    }
+
+    nav a { 
+        color: #c0c0c0; 
+        /*color: #fff;*/
+        font-size: 15px;
+        font-weight: bold;
+        display: block; 
+        padding: 0.5em 1em; 
+        text-decoration: none; 
+    }
+    nav a:hover { color: #FFF;}
+
+    nav ul,
+    nav ul li { list-style-type: none; padding: 0; margin: 0; }
+
+    nav > ul { text-align: center; margin: 20px 0;}
+    nav > ul > li { display: inline-block; }
+    nav > ul > li:first-child { border-left: none; }
+
+    .sub-menu {
+        border: 1px solid #ebebeb;
+        background: #FFF;
+        border-radius: 3px;
+        width: 167px;
+        padding: 10px 0;
+        margin-left: 0px;
+        margin-top: 5px ;
+        text-align: left;
+        li > a {color: #333; font-size: 13px; font-weight: normal;}
+        li > a:hover {background-color: #ebebeb}
+    }
+
+
+
+    /*new menu bar*/
 
   .currentVersion {
     font-weight: bold;
