--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -814,8 +814,9 @@ header.navbar {
     margin-right: -8px; }
 
 header.global {
+  font-family: 'Open Sans';
   padding: 0px 80px;
-  background-color: #ffffff;
+  background-color: #2687ea;
   border-bottom: 1px solid #c2c0c1;
   color: #333;
   /*height: 70px;*/
@@ -823,7 +824,13 @@ header.global {
   position: inherit;
   top: 50px;
   left: 0px;
-  width: 100%; }
+  width: 100%;
+  /*a:link {color: $monaca-blue; text-decoration: none;}*/
+  /*a:visited {color: $monaca-blue; text-decoration: none;}*/
+  /*a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}*/
+  /*a:active {color: $monaca-blue; text-decoration: none;}*/
+  /*new menu bar*/
+  /*new menu bar*/ }
   header.global:after {
     content: ".";
     display: block;
@@ -831,19 +838,67 @@ header.global {
     height: 0px;
     visibility: hidden;
     font-size: 0; }
-  header.global a:link {
-    color: #5d89cb;
+  header.global .sub-menu-parent {
+    position: relative; }
+  header.global .current > a {
+    color: #FFF;
+    border-bottom: 3px solid #FFF; }
+  header.global .sub-menu {
+    visibility: hidden;
+    /* hides sub-menu */
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    transform: translateY(-2em);
+    z-index: -1;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s; }
+  header.global .sub-menu-parent:hover .sub-menu {
+    visibility: visible;
+    /* shows sub-menu */
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s;
+    /* this removes the transition delay so the menu will be visible while the other styles transition */ }
+  header.global nav a {
+    color: #c0c0c0;
+    /*color: #fff;*/
+    font-size: 15px;
+    font-weight: bold;
+    display: block;
+    padding: 0.5em 1em;
     text-decoration: none; }
-  header.global a:visited {
-    color: #5d89cb;
-    text-decoration: none; }
-  header.global a:hover {
-    color: #5d89cb;
-    text-decoration: underline;
-    width: auto; }
-  header.global a:active {
-    color: #5d89cb;
-    text-decoration: none; }
+  header.global nav a:hover {
+    color: #FFF; }
+  header.global nav ul,
+  header.global nav ul li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+  header.global nav > ul {
+    text-align: center;
+    margin: 20px 0; }
+  header.global nav > ul > li {
+    display: inline-block; }
+  header.global nav > ul > li:first-child {
+    border-left: none; }
+  header.global .sub-menu {
+    border: 1px solid #ebebeb;
+    background: #FFF;
+    border-radius: 3px;
+    width: 167px;
+    padding: 10px 0;
+    margin-left: 0px;
+    margin-top: 5px;
+    text-align: left; }
+    header.global .sub-menu li > a {
+      color: #333;
+      font-size: 13px;
+      font-weight: normal; }
+    header.global .sub-menu li > a:hover {
+      background-color: #ebebeb; }
   header.global .currentVersion {
     font-weight: bold;
     padding: 0 0.25em; }
