[css] translate the drop down global toc menu

--- a/src/web/partial/globaltoc.ja.html
+++ b/src/web/partial/globaltoc.ja.html
@@ -1,55 +1,55 @@
 <nav>
     <ul>
         <li class="sub-menu-parent" id="products_guide">
-            <a href="#">PRODUCTS GUIDE</a>
+            <a href="#">Monacaのガイド</a>
             <ul class="sub-menu">
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}products_guide/monaca_intro/">Monaca Development Overview</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_ide/">Monaca Cloud IDE</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}products_guide/monaca_intro/">Monaca での開発の概要</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_ide/">Monaca クラウド IDE</a></li>
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_localkit/">Monaca Localkit</a></li>
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_cli/">Monaca CLI</a></li>
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_vs/">Monaca for Visual Studio</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}debugger/">Monaca Debugger</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}backend/">Monaca Backend</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}power_plugins/">Monaca Power Plugins</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}debugger/">Monaca デバッガー</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}backend/">Monaca バックエンド</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}power_plugins/">Monaca 提供のプラグイン</a></li>
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}onsenui/">Onsen UI</a></li>
             </ul>
         </li>
         <li class="sub-menu-parent" id="tutorials">
-            <a href="#">TUTORIALS</a>
+            <a href="#">チュートリアル</a>
             <ul class="sub-menu">
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_ide/tutorial/">Monaca Cloud IDE Tutorial</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_localkit/tutorial/">Monaca Localkit Tutorial</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_cli/tutorial/">Monaca CLI Tutorial</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_vs/tutorial/">Monaca for Visual Studio Tutorial</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_ide/tutorial/">Monaca クラウド IDE のチュートリアル</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_localkit/tutorial/">Monaca Localkit のチュートリアル</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_cli/tutorial/">Monaca CLI のチュートリアル</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}monaca_vs/tutorial/">Monaca for Visual Studio のチュートリアル</a></li>
             </ul>
         </li>
         <li class="sub-menu-parent" id="reference">
             <a href="#">API REFERENCE</a>
             <ul class="sub-menu">
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/monaca_api/">Monaca API</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/cordova_6.2/">Core Cordova Plugins</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/third_party_phonegap/">Third-party Cordova Plugins</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/service_integration/">Service Integration</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/config/">Configuration Files</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/cordova_6.2/">Cordova のコア プラグイン</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/third_party_phonegap/">サードパーティー製 Cordova プラグイン</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/service_integration/">外部サービスとの連携</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}reference/config/">設定ファイル</a></li>
            </ul>
         </li>
         <li class="sub-menu-parent" id="samples">
-            <a href="#">SAMPLES & TIPS</a>
+            <a href="#">サンプルアプリ & TIPS</a>
             <ul class="sub-menu">
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}sampleapp/samples/">Sample Apps & Templates</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}sampleapp/tips/">Tips & Tricks</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}sampleapp/samples/">サンプルアプリ & テンプレート</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}sampleapp/tips/">開発 Tips</a></li>
             </ul>
         </li>
         <li class="sub-menu-parent" id="faq">
             <a href="#">FAQ</a>
             <ul class="sub-menu">
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/general/">General</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/general/">概要</a></li>
                 <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/environment/">IDE</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/build/">Build</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/subscription/">Subscription</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/application/">Application</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/usage/">Usage</a></li>
-                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/debugger/">Debug</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/build/">ビルドを行う</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/subscription/">契約プランの変更</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/application/">アプリケーション</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/usage/">使用方法</a></li>
+                <li><a href="{{#is lang 'ja'}}/ja/{{else}}/en/{{/is}}faq/debugger/">デバッグ</a></li>
             </ul>
         </li>
    </ul>
